test/e2e/testdata/ext-auth-http-backend-securitypolicy.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-ext-auth-backend
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  hostnames: ["www.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            # This is the path that will be protected by ext auth
            value: /http
          headers:
            - name: x-current-user
              value: user2
      backendRefs:
        - name: infra-backend-v2
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            # This is the path that will be protected by ext auth
            value: /http
          headers:
            - name: x-current-user
              value: user3
      backendRefs:
        - name: infra-backend-v3
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            # This is the path that will be protected by ext auth
            value: /http
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-without-ext-auth-backend
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  hostnames: ["www.example.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            # This is the path that will be public
            value: /public
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ext-auth-backend
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-ext-auth-backend
  extAuth:
    recomputeRoute: true
    http:
      backendRefs:
        # should add namespace here because envoy will locate in envoy-gateway-system namespace
        - name: backend-fqdn
          kind: Backend
          group: gateway.envoyproxy.io
          namespace: gateway-conformance-infra
          port: 8080
      headersToBackend: ["x-current-user"]
